# django2_project_web

./: .gitignore  pyproject.toml  requirements.txt
core/: admin.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/templates/: contato.html  index.html  produto.html
django2/: conf.py  settings.py  urls.py
