[tool.poetry]
name = "django2-project-web"
version = "0.1.0"
description = ""
authors = ["Lucas Pires <lucas.pires@leaderweb.com.br>"]
readme = "README.md"
packages = [{include = "django2_project_web"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.5"


[tool.poetry.group.dev.dependencies]
asgiref = "^3.6.0"
backports-zoneinfo = "^0.2.1"
beautifulsoup4 = "^4.11.1"
bootstrap4 = "^0.1.0"
django = "^4.1.5"
django-bootstrap4 = "^22.3"
django-stdimage = "^6.0.1"
gunicorn = "^20.1.0"
pillow = "^9.4.0"
pymysql = "^1.0.2"
soupsieve = "^2.3.2.post1"
sqlparse = "^0.4.3"
whitenoise = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
